@@ -35,6 +35,8 @@ evans
   b - Fix so "pbs_server --ha" does not fail when checking path for server.lock file. TRQ-907.
   b - Fixed a problem in qmgr where only 9 commands could be completed before a failure. 
       Bugzilla 192 and TRQ-931
+  b - Fix to prevent deadlock on server restart with completed job that had a dependency.
+      TRQ-936.
 
 4.0.1
   b - Fix trqauthd init scripts to use correct path to trqauthd.
